edit front page logic

--- a/http-server/src/public/index.html
+++ b/http-server/src/public/index.html
@@ -38,8 +38,17 @@
             <button id="turnoff">Video Turn Off</button>
           </div>
         </div>
+        <button id="next">Next</button>
       </div>
-      <div id="videos"></div>
+      <div id="videos">
+        <video
+          id="myVideo2"
+          autoplay
+          playsinline
+          width="600"
+          height="500"
+        ></video>
+      </div>
     </main>
     <footer></footer>
     <script src="http://localhost:4001/socket.io/socket.io.js"></script>
